fix timbstone text alignment

--- a/result/result.css
+++ b/result/result.css
@@ -8,8 +8,8 @@ main {
 }
 section {
     color: black;
-    padding-bottom: 60px;
-    padding-right: 60px;
+    padding-bottom: 120px;
+    padding-right: 170px;
     padding-left: 0;
     margin-left: 0;
 
